gitops/tools/apps/tycho/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tycho-gateway
  namespace: tycho
  labels:
    app.kubernetes.io/name: tycho-gateway
    app.kubernetes.io/part-of: tycho
spec:
  selector:
    app.kubernetes.io/name: tycho-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
